# spotify-wrapped-clone

./: .gitignore  .pytest.ini  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-venv-dev.txt
containers/airflow/: Dockerfile  airflow.env  requirements.txt
containers/hadoop/: hadoop.env
containers/hdfs/: hdfs.env
containers/hive-metastore/: entrypoint.sh  hdfs-site.xml  hive-metastore.env  hive-site.xml
containers/postgres/docker-entrypoint-initdb.d/: pg_metadb_init.sh
containers/spark/: spark-defaults.conf  spark-master.env  spark-worker.env
dags/: daily_user_clickstream_etl.py  initial_loading.py  scrape_spotify_api.py
dags/include/: connections.yml  dag_test_config.py  variables.yml
dags/include/config/: connections.yml  variables.yml
jobs/: create_hive_tbls.py  load_dim_tbls.py
src/dags/: daily_clickstream_etl.py  daily_data_generation.py  daily_user_clickstream_etl.py  initial_loading.py  scrape_spotify_api.py
src/jobs/: daily_clickstream_generate.py  daily_clickstream_transform.py  generate_daily_clickstream.py  load_dim_tbls.py
src/utils/: data_gen.py
tests/dags/: test_daily_user_clickstream_etl.py  test_initial_loading.py  test_scrape_spotify_api.py
tests/data_gen/: test_user_clickstream.py  user_clickstream.py
tests/faker_custom_providers/: test_spotify.py  test_user_clickstream.py  test_user_info.py
tests/jobs/: test_generate_daily_clickstream.py  test_load_dim_tbls.py
tests/spotify_api_client/: __init__.py  test_auth.py  test_session.py  test_session_creation.py
(+22 files in other folders)
