[tool.poetry]
name = "spotify-wrapped-clone"
version = "0.0"
description = "Spotify Wrapped, but more sus."
authors = ["minkminkk"]
readme = "README.md"
packages = [{include = "poetry_demo"}]

[tool.poetry.dependencies]
python = "^3.8"

[tool.pytest.ini_options]
pythonpath = ["src/dags"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"